trunk/Archive/6af8f90cd65bfb60fd85308797c4b0bd-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:5:3: warning: missing terminating ' character [enabled by default]
 we'd have to make a pretty convoluted if then else tree.
   ^
main.cpp:5:1: error: missing terminating ' character
 we'd have to make a pretty convoluted if then else tree.
 ^
main.cpp:2:1: error: ‘Excerpt’ does not name a type
 Excerpt from LYAH:
 ^
